fix: Fix ResultServiceImpl save method;
#commit
- remove defaults from application.properties;
- simplify Dockerfile for environment flexibility;